--- a/less/index.less
+++ b/less/index.less
@@ -1,19 +1,70 @@
 .container {
-    max-width: 1100px;
-ul li a {
+  max-width: 1100px;
+  font-family: 'Lato', 'lato', sans-serif;
+  ul li a {
     color: black;
-}
-.jumbotron {
+  }
+  .searchinput {
+    background-color: #785985;
+    border: black;
+    width: 30%;
+    font-size: 1rem;
+    color: black;
+  }
+
+  .button {
+    background-color: #785985;
+    border: black;
+    width: 15%;
+    font-size: 1rem;
+  }
+
+  .bubblewrap {
+    background-color: #0b0146;
+    padding: 20px;
+    color: black;
+    margin: 0px;
+    img {
+      animation: spin 2s linear infinite alternate;
+      /*Set our animation play state to paused initially */
+      animation-play-state: paused;
+      margin: 3px;
+    }
+    img:hover {
+      background-color: #785985;
+      opacity: 0.7 !important;
+      animation-play-state: running;
+    }
+    p {
+      margin-top: 30px;
+      text-align: center;
+      color: #785985;
+    }
+  }
+
+  .portal {
+    color: #785985;
+    background-color: #0b0146;
+  }
+  .feedback {
+    color: #785985;
+  }
+
+  .jumbotron {
     background-color: #88c8c2;
     color: #ffffff;
-    p { text-align: center;
-
+    p {
+      text-align: center;
     }
+  }
+  .jumbotron img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
-.jumbotron img{
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-}
-
+@keyframes spin {
+  100% {
+    transform: rotate(10turn);
+  }
 }
