--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 .container {
   max-width: 1100px;
   font-family: 'Lato', 'lato', sans-serif;
@@ -8,14 +13,17 @@
 .container .searchinput {
   background-color: #785985;
   border: black;
-  width: 30%;
   font-size: 1rem;
-  color: black;
+}
+.container .searchcontainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
 }
 .container .button {
   background-color: #785985;
   border: black;
-  width: 15%;
   font-size: 1rem;
 }
 .container .bubblewrap {
@@ -63,4 +71,10 @@
   100% {
     transform: rotate(10turn);
   }
+}
+input:-moz-placeholder {
+  color: #baa;
+}
+input::-webkit-input-placeholder {
+  color: #baa;
 }
