--- a/less/index.less
+++ b/less/index.less
@@ -1,3 +1,7 @@
+@placeholder-color: #baa;
+*, *:before, *:after {
+  box-sizing: border-box;
+}
 .container {
   max-width: 1100px;
   font-family: 'Lato', 'lato', sans-serif;
@@ -7,15 +11,20 @@
   .searchinput {
     background-color: #785985;
     border: black;
-    width: 30%;
     font-size: 1rem;
-    color: black;
   }
+ 
+  .searchcontainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  }
+  
 
   .button {
     background-color: #785985;
     border: black;
-    width: 15%;
     font-size: 1rem;
   }
 
@@ -67,4 +76,12 @@
   100% {
     transform: rotate(10turn);
   }
+}
+
+input:-moz-placeholder{
+  color: @placeholder-color;
+}
+
+input::-webkit-input-placeholder{
+  color: @placeholder-color;
 }
